component/contact-us/contact.css
#contact-form{
    width: 100%;
    height: 80%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 15%;
}

#form{
    width: 50%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap:8px;
    align-items: start;
    padding-left: 20%;
}

#details{
    width: 50%;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap:8px;
    align-items: end;
    padding-right: 20%;
}

